<resources>
    <string name="app_name">WeatherApp</string>
    <string name="city">City</string>
    <string name="search">search</string>
    <string name="c">c</string>
    <string name="f">f</string>
    <string name="description">description</string>
    <string name="degree">degree</string>
    <string name="units">ºC | ºF</string>
    <string name="feels_like">feels like</string>
    <string name="pressure">pressure</string>
    <string name="fahrenheit"> ºF - Fahrenheit degree</string>
    <string name="Celsius">ºC - Celsius degree</string>
    <string name="get_current_location_button">Get Current Location</string>
    <string name="click_on_button_to_get_current_location_output">Click button above for current location.\n(Results will show below.)</string>

    <string name="ok">OK</string>
    <string name="settings">Settings</string>

    <string name="fine_location_permission_rationale">The fine location permission is needed for getting weather data.</string>
    <string name="fine_permission_denied_explanation">Fine location permission was denied but is needed getting weather datay.</string>
    <string name="permission_approved_explanation">You approved location.</string>
    <string name="input_required">Input required</string>



</resources>