<?xml version="1.0" encoding="utf-8"?>


<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraintlayout"

    >

    <EditText
        android:id="@+id/search_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints="city name"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/search"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/search_btn"
        app:layout_constraintEnd_toStartOf="@+id/search_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="monospace"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/degreeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="monospace"
        android:text="@string/degree"
        android:textColor="#050505"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/search_et"
        app:layout_constraintTop_toBottomOf="@+id/search_et" />

    <TextView
        android:id="@+id/unit_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:fontFamily="monospace"
        android:text="@string/units"
        app:layout_constraintStart_toEndOf="@+id/degreeTV"
        app:layout_constraintTop_toTopOf="@+id/degreeTV" />

    <TextView
        android:id="@+id/description_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="monospace"
        android:text="@string/description"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/degreeTV"
        app:layout_constraintTop_toBottomOf="@+id/degreeTV" />

    <TextView
        android:id="@+id/feels_like_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="monospace"
        android:text="@string/feels_like"
        app:layout_constraintStart_toStartOf="@+id/description_tv"
        app:layout_constraintTop_toBottomOf="@+id/description_tv" />

    <TextView
        android:id="@+id/feels_like_value_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:text="0"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/feels_like_tv"
        app:layout_constraintTop_toBottomOf="@+id/feels_like_tv" />

    <TextView
        android:id="@+id/pressure_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="monospace"
        android:text="@string/pressure"
        app:layout_constraintStart_toEndOf="@+id/feels_like_tv"
        app:layout_constraintTop_toBottomOf="@+id/description_tv" />

    <TextView
        android:id="@+id/pressure_value_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:text="0"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/pressure_tv"
        app:layout_constraintTop_toBottomOf="@+id/pressure_tv" />

    <TextView
        android:id="@+id/outputTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/feels_like_value_tv"
        app:layout_constraintTop_toBottomOf="@+id/feels_like_value_tv" />


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>